2004-07-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-foreign.c 
	(exchange_hierarchy_foreign_add_folder)(remove_folder): Added code to
	create and remove esources for the other user's subscribed folders.
	This fixes #60964

2004-07-24  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* configure.in: Added "es" to ALL_LINGUAS

2004-07-23  Dan Winship  <danw@novell.com>

	* camel/camel-exchange-folder.c (init): Fix
	folder->permanent_flags definition
	(camel_exchange_folder_update_message_flags): Fix the list of
	flags to not unset because they aren't set on the server to
	include "JUNK" (since it's never set on the server).
	(camel_exchange_folder_construct): Don't pass the non-server flags
	to the server, or it will think they've changed and waste time
	telling us so.

2004-07-23  Åsmund Skjæveland  <aasmunds@fys.uio.no>

	* configure.in: Added "nn" to ALL_LINGUAS.
	* po/nn.po: Started Norwegian Nynorsk translation.

2004-07-22  Dan Winship  <danw@novell.com>

	* storage/ximian-connector.xml: Remove the quota command, since it
	wasn't implemented.

2004-07-19  Dan Winship  <danw@novell.com>

	* configure.in: 1.5.91

	* NEWS: Update

2004-07-16  Dan Winship  <danw@novell.com>

	* lib/e2k-kerberos.c (krb5_result_to_e2k_kerberos_result):
	"KRB5KDC_ERR_KEY_EXPIRED" is apparently a heimdal-only-ism. Use
	"KRB5KDC_ERR_KEY_EXP" instead.
	(e2k_kerberos_change_password): Likewise, use
	krb5_free_data_contents instead of krb5_data_free.

2004-07-15  Dan Winship  <danw@novell.com>

	* lib/e2k-kerberos.c: Lots of changes: properly namespace the
	functions (now "e2k_kerberos_check_password" and
	"e2k_kerberos_change_password"), remove the code that dealt with
	the local krb5.conf file (libkrb5 can autodetect the servers given
	the realm name), return status code enums rather than arbitrary
	krb5 error codes, and plug a few memory leaks.

	* lib/e2k-global-catalog.c (ntlm_bind): Fill in gc->domain with
	the name of the Windows 2000 domain.
