@@ -1,3 +1,9 @@
+2004-07-26  Dan Winship  <danw@novell.com>
+
+	* calendar/e-cal-backend-exchange.c (d): Turn off debug macro
+	* calendar/e-cal-backend-exchange-calendar.c (d): Likewise
+	* calendar/e-cal-backend-exchange-tasks.c (d): Likewise
+
 2004-07-26  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* storage/exchange-hierarchy-foreign.c 
